@@ -116,11 +116,10 @@ ObsMeansGroup2 <- c(mean(group2[,1]), mean(group2[,2]))
 
 # Second we extract the parameter estimates and matrix algebra results from the model
 Sigma <- mxEval(Sigma, defMeansFit)
-Mu <- mxEval(Mu, defMeansFit)
 M <- mxEval(M, defMeansFit)
 beta <- mxEval(beta, defMeansFit)
 
 # Third, we check to see if things are more or less equal
 omxCheckCloseEnough(ObsCovs, Sigma, .01)
 omxCheckCloseEnough(ObsMeansGroup1, as.vector(M+beta), .001)
-omxCheckCloseEnough(ObsMeansGroup2, as.vector(Mu), .001)
+omxCheckCloseEnough(ObsMeansGroup2, as.vector(M), .001)
